--- a/notebooks/Challenge_pandas.ipynb
+++ b/notebooks/Challenge_pandas.ipynb
@@ -919,6 +919,149 @@
     "    }\n",
     "    return pd.DataFrame(categories.items(), columns=[\"category\", \"accounts_count\"])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**How to convert dictionary items into pandas DataFrame**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's create a dictionary item called 'customers'\n",
+    "customers ={\n",
+    "    'customer_id':[1,2,3,4],\n",
+    "    'name':['Sami','Dave','Dagi','Beti'],\n",
+    "    'city':['AA','DD','HW','BD']\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'customer_id': [1, 2, 3, 4], 'name': ['Sami', 'Dave', 'Dagi', 'Beti'], 'city': ['AA', 'DD', 'HW', 'BD']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(customers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   customer_id  name city\n",
+      "0            1  Sami   AA\n",
+      "1            2  Dave   DD\n",
+      "2            3  Dagi   HW\n",
+      "3            4  Beti   BD\n"
+     ]
+    }
+   ],
+   "source": [
+    "customers_df = pd.DataFrame(customers)\n",
+    "print(customers_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             0                         1\n",
+      "0  customer_id              (1, 2, 3, 4)\n",
+      "1         name  (Sami, Dave, Dagi, Beti)\n",
+      "2         city          (AA, DD, HW, BD)\n"
+     ]
+    }
+   ],
+   "source": [
+    "customers_df = pd.DataFrame(customers_dic)\n",
+    "print(customers_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "department = {\n",
+    "    'Math':15,\n",
+    "    'Phy': 12,\n",
+    "    'Chemy':10,\n",
+    "    'Bio':6\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_items([('Math', 15), ('Phy', 12), ('Chemy', 10), ('Bio', 6)])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(department.items())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Department  Number_of_students\n",
+      "0       Math                  15\n",
+      "1        Phy                  12\n",
+      "2      Chemy                  10\n",
+      "3        Bio                   6\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "dept_items = department.items()\n",
+    "dept_df = pd.DataFrame(dept_items, columns=['Department','Number_of_students'])\n",
+    "print(dept_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
