--- a/notebooks/Challenge_pandas.ipynb
+++ b/notebooks/Challenge_pandas.ipynb
@@ -642,6 +642,164 @@
     ".max().reset_index()\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Assume we have a employee and department tables:\n",
+    "where departmentId is forign key in employee table."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "employee = pd.DataFrame({\n",
+    "    'id':[1,2,3,4,5],\n",
+    "    'name':['dani','josi','babe','sol','mar'],\n",
+    "    'departmentId': [1,3,2,3,1],\n",
+    "    'salary':[2500,7000,4000,7000,5200]\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "department = pd.DataFrame({\n",
+    "    'id':[1,2,3],\n",
+    "    'name':['sales','marketing','IT']\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now using this tables, display a table:\n",
+    "-  containing a maximum salary \n",
+    "-  and corresponding department."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Your display should contain a table with three columns:\n",
+    "column_1 = 'Employee', column_2 = 'Department' and column_3 = 'Salary'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def max_salaries(employee:pd.DataFrame, department:pd.DataFrame) -> pd.DataFrame:\n",
+    "    merge_ = employee.merge(department, left_on='departmentId', right_on='id', suffixes=('_emp','_dept'))\n",
+    "    max_salary = merge_.groupby('name_dept')['salary'].max().reset_index()\n",
+    "    max_result = merge_.merge(max_salary,on=['name_dept','salary'])\n",
+    "    max_result = max_result.rename(columns={'name_dept':'Department', 'name_emp':'Employee','salary':'Salary'})\n",
+    "    return max_result[['Employee','Department','Salary']].sort_values(by='Salary', ascending=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Employee</th>\n",
+       "      <th>Department</th>\n",
+       "      <th>Salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>josi</td>\n",
+       "      <td>IT</td>\n",
+       "      <td>7000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>sol</td>\n",
+       "      <td>IT</td>\n",
+       "      <td>7000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>mar</td>\n",
+       "      <td>sales</td>\n",
+       "      <td>5200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>babe</td>\n",
+       "      <td>marketing</td>\n",
+       "      <td>4000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Employee Department  Salary\n",
+       "0     josi         IT    7000\n",
+       "2      sol         IT    7000\n",
+       "3      mar      sales    5200\n",
+       "1     babe  marketing    4000"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_salaries(employee=employee,department=department)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "def max_salaries()"
+   ]
   }
  ],
  "metadata": {
