--- a/notebooks/Challenge_pandas.ipynb
+++ b/notebooks/Challenge_pandas.ipynb
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +798,324 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "def max_salaries()"
+    "Find the number of *rows* and *columns* of a pandas DataFrame. \n",
+    "- Use employee table."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   no_of_rows  no_of_columns\n",
+      "0           5              4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0    5\n",
+      "Name: no_of_rows, dtype: int64, 0    4\n",
+      "Name: no_of_columns, dtype: int64]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"{[df_shape.no_of_rows,df_shape.no_of_columns]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   no_of_rows  no_of_columns\n",
+      "0           5              4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def no_rows_columns(employee:pd.DataFrame) -> List[int]:\n",
+    "    df_shape = pd.DataFrame({\n",
+    "        'no_of_rows':[employee.shape[0]],\n",
+    "        'no_of_columns':[employee.shape[1]]\n",
+    "    })\n",
+    "    return [int(df_shape.iloc[0,0]), int(df_shape.iloc[0,1])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 4]"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "no_rows_columns(employee=employee)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "employee = pd.DataFrame({\n",
+    "    'id':[1,2,3,4,5],\n",
+    "    'name':['dani','josi','babe','sol','mar'],\n",
+    "    'departmentId': [1,3,2,3,1],\n",
+    "    'salary':[2500,7000,4000,7000,5200]\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>departmentId</th>\n",
+       "      <th>salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>dani</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>josi</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>babe</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>sol</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>mar</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5200</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  name  departmentId  salary\n",
+       "0   1  dani             1    2500\n",
+       "1   2  josi             3    7000\n",
+       "2   3  babe             2    4000\n",
+       "3   4   sol             3    7000\n",
+       "4   5   mar             1    5200"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "employee"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "df_shape1 = pd.DataFrame({\n",
+    "    'no_of_rows':[employee.index.value_counts().sum()],\n",
+    "    'no_of_columns':[employee.columns.value_counts().sum()]\n",
+    "})\n",
+    "print([int(df_shape1.iloc[0,0]), int(df_shape1.iloc[0,1])])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* You are given a 0-indexed 2D integer matrix grid of size n * n with values in the range [1, n2]. \n",
+    "* Each integer appears exactly once except a which appears twice and b which is missing. \n",
+    "* The task is to find the repeating and missing numbers a and b.\n",
+    "\n",
+    "*Return a 0-indexed integer array ans of size 2 where ans[0] equals to a and ans[1] equals to b.*\n",
+    "\n",
+    " \n",
+    "**Example 1:**\n",
+    "\n",
+    "- Input: grid = [[1,3],[2,2]]\n",
+    "- Output: [2,4]\n",
+    "- Explanation: Number 2 is repeated and number 4 is missing so the answer is [2,4]."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4]\n",
+      "[9, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "def findErrorNums(grid):\n",
+    "    n = len(grid)\n",
+    "    flattened = [num for row in grid for num in row]  # Flatten the 2D grid into a 1D list\n",
+    "    count = Counter(flattened)  # Count occurrences of each number\n",
+    "    \n",
+    "    repeated =[]\n",
+    "    missing = []\n",
+    "    for num in range(1, n * n + 1):\n",
+    "        if count[num] == 2:\n",
+    "            repeated = num\n",
+    "        elif num not in count:\n",
+    "            missing = num\n",
+    "            \n",
+    "    return [repeated, missing]\n",
+    "\n",
+    "# Example cases\n",
+    "print(findErrorNums([[1,3],[2,2]]))  # Output: [2, 4]\n",
+    "print(findErrorNums([[9,1,7],[8,9,2],[3,4,6]]))  # Output: [9, 5]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4]\n",
+      "[9, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def findErrorNums(grid):\n",
+    "    n = len(grid)\n",
+    "    flattened = [num for row in grid for num in row] \n",
+    "    freq = {} \n",
+    "    repeated = missing = None\n",
+    "    for num in flattened:\n",
+    "        if num in freq:\n",
+    "            repeated = num\n",
+    "        else:\n",
+    "            freq[num] = 1\n",
+    "    for num in range(1, n * n + 1):\n",
+    "        if num not in freq:\n",
+    "            missing = num\n",
+    "            break\n",
+    "    \n",
+    "    return [repeated, missing]\n",
+    "\n",
+    "\n",
+    "print(findErrorNums([[1,3],[2,2]]))  # Output: [2, 4]\n",
+    "print(findErrorNums([[9,1,7],[8,9,2],[3,4,6]]))  # Output: [9, 5]\n"
    ]
   }
  ],
