--- a/notebooks/Challenge_pandas.ipynb
+++ b/notebooks/Challenge_pandas.ipynb
@@ -1198,10 +1198,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def dropMissingData(students: pd.DataFrame) -> pd.DataFrame:\n",
+    "    df = students.dropna()\n",
+    "    return df"
+   ]
   }
  ],
  "metadata": {
