--- a/notebooks/Challenge_pandas.ipynb
+++ b/notebooks/Challenge_pandas.ipynb
@@ -1198,13 +1198,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def dropMissingData(students: pd.DataFrame) -> pd.DataFrame:\n",
-    "    df = students.dropna()\n",
+    "    df = students.fillna(subset=['name'])\n",
     "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# concatenation of df1 and df2\n",
+    "df1 = pd.DataFrame({\n",
+    "    'name':['Ab','Bd','Gh'],\n",
+    "    'age':[20,53,42]\n",
+    "})\n",
+    "df2 = pd.DataFrame({\n",
+    "    'name':['Ac','Ed','Hh','Ab'],\n",
+    "    'age':[22,33,60,20]\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  name  age\n",
+      "0   Ab   20\n",
+      "1   Bd   53\n",
+      "2   Gh   42\n",
+      "3   Ac   22\n",
+      "4   Ed   33\n",
+      "5   Hh   60\n"
+     ]
+    }
+   ],
+   "source": [
+    "concat_df = pd.concat([df1,df2], ignore_index=True)\n",
+    "concat_df.drop_duplicates(subset=['name','age'], inplace=True)\n",
+    "print(concat_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DataFrame report\n",
+    "+-------------+--------+\n",
+    "| Column Name | Type   |\n",
+    "+-------------+--------+\n",
+    "| product     | object |\n",
+    "| quarter_1   | int    |\n",
+    "| quarter_2   | int    |\n",
+    "| quarter_3   | int    |\n",
+    "| quarter_4   | int    |\n",
+    "+-------------+--------+\n",
+    "Write a solution to reshape the data so that each row represents sales data for a product in a specific quarter.\n",
+    "\n",
+    "The result format is in the following example.\n",
+    "\n",
+    " \n",
+    "\n",
+    "Example 1:\n",
+    "\n",
+    "Input:\n",
+    "+-------------+-----------+-----------+-----------+-----------+\n",
+    "| product     | quarter_1 | quarter_2 | quarter_3 | quarter_4 |\n",
+    "+-------------+-----------+-----------+-----------+-----------+\n",
+    "| Umbrella    | 417       | 224       | 379       | 611       |\n",
+    "| SleepingBag | 800       | 936       | 93        | 875       |\n",
+    "+-------------+-----------+-----------+-----------+-----------+\n",
+    "Output:\n",
+    "+-------------+-----------+-------+\n",
+    "| product     | quarter   | sales |\n",
+    "+-------------+-----------+-------+\n",
+    "| Umbrella    | quarter_1 | 417   |\n",
+    "| SleepingBag | quarter_1 | 800   |\n",
+    "| Umbrella    | quarter_2 | 224   |\n",
+    "| SleepingBag | quarter_2 | 936   |\n",
+    "| Umbrella    | quarter_3 | 379   |\n",
+    "| SleepingBag | quarter_3 | 93    |\n",
+    "| Umbrella    | quarter_4 | 611   |\n",
+    "| SleepingBag | quarter_4 | 875   |\n",
+    "+-------------+-----------+-------+\n",
+    "Explanation:\n",
+    "The DataFrame is reshaped from wide to long format. Each row represents the sales of a product in a quarter."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def meltTable(report: pd.DataFrame) -> pd.DataFrame:\n",
+    "    df_melt = pd.melt(report,id_vars='product',value_vars=['quarter_1','quarter_2','quarter_3','quarter_4'],var_name = 'quarter', value_name='sales')\n",
+    "    return df_melt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DataFrame animals\n",
+    "+-------------+--------+\n",
+    "| Column Name | Type   |\n",
+    "+-------------+--------+\n",
+    "| name        | object |\n",
+    "| species     | object |\n",
+    "| age         | int    |\n",
+    "| weight      | int    |\n",
+    "+-------------+--------+\n",
+    "Write a solution to list the names of animals that weigh strictly more than 100 kilograms.\n",
+    "\n",
+    "Return the animals sorted by weight in descending order.\n",
+    "\n",
+    "The result format is in the following example.\n",
+    "\n",
+    " \n",
+    "\n",
+    "Example 1:\n",
+    "\n",
+    "Input: \n",
+    "DataFrame animals:\n",
+    "+----------+---------+-----+--------+\n",
+    "| name     | species | age | weight |\n",
+    "+----------+---------+-----+--------+\n",
+    "| Tatiana  | Snake   | 98  | 464    |\n",
+    "| Khaled   | Giraffe | 50  | 41     |\n",
+    "| Alex     | Leopard | 6   | 328    |\n",
+    "| Jonathan | Monkey  | 45  | 463    |\n",
+    "| Stefan   | Bear    | 100 | 50     |\n",
+    "| Tommy    | Panda   | 26  | 349    |\n",
+    "+----------+---------+-----+--------+\n",
+    "Output: \n",
+    "+----------+\n",
+    "| name     |\n",
+    "+----------+\n",
+    "| Tatiana  |\n",
+    "| Jonathan |\n",
+    "| Tommy    |\n",
+    "| Alex     |\n",
+    "+----------+\n",
+    "Explanation: \n",
+    "All animals weighing more than 100 should be included in the results table.\n",
+    "Tatiana's weight is 464, Jonathan's weight is 463, Tommy's weight is 349, and Alex's weight is 328.\n",
+    "The results should be sorted in descending order of weight.\n",
+    " \n",
+    "\n",
+    "In Pandas, method chaining enables us to perform operations on a DataFrame without breaking up each operation into a separate line or creating multiple temporary variables. \n",
+    "\n",
+    "Can you complete this task in just one line of code using method chaining?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def findHeavyAnimals(animals: pd.DataFrame) -> pd.DataFrame:\n",
+    "    df_animals = animals.loc[animals['weight']>100,['name','weight']]\n",
+    "    df_animals = df_animals.sort_values(by='weight',ascending= False)\n",
+    "    return df_animals[['name']]   "
    ]
   }
  ],
