--- a/notebooks/MLlib_2.ipynb
+++ b/notebooks/MLlib_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,45 +11,236 @@
     "from pyspark.ml.feature import StringIndexer, VectorAssembler\n",
     "from pyspark.ml.classification import LogisticRegression\n",
     "from pyspark.ml.evaluation import BinaryClassificationEvaluator\n",
-    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Initialize Spark Session\n",
     "spark = SparkSession.builder.appName(\"Titanic_MLlib\").getOrCreate()\n",
-    "\n",
     "# Load the dataset\n",
-    "data = spark.read.csv(\"titanic.csv\", header=True, inferSchema=True)\n",
-    "\n",
+    "data = spark.read.csv(\"titanic.csv\", header=True, inferSchema=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Data preprocessing\n",
     "data = data.select(\"Survived\", \"Pclass\", \"Sex\", \"Age\", \"SibSp\", \"Parch\", \"Fare\")\n",
-    "data = data.dropna()\n",
-    "\n",
+    "data = data.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Convert categorical column \"Sex\" to numeric\n",
     "indexer = StringIndexer(inputCol=\"Sex\", outputCol=\"SexIndex\")\n",
     "data = indexer.fit(data).transform(data)\n",
-    "data = data.drop(\"Sex\")\n",
-    "\n",
+    "data = data.drop(\"Sex\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Assemble features\n",
     "assembler = VectorAssembler(inputCols=[\"Pclass\", \"SexIndex\", \"Age\", \"SibSp\", \"Parch\", \"Fare\"], \n",
     "                            outputCol=\"features\")\n",
-    "data = assembler.transform(data).select(\"Survived\", \"features\")\n",
-    "\n",
+    "data = assembler.transform(data).select(\"Survived\", \"features\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Split dataset into training and testing\n",
-    "train_data, test_data = data.randomSplit([0.8, 0.2], seed=42)\n",
-    "\n",
+    "train_data, test_data = data.randomSplit([0.8, 0.2], seed=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Train logistic regression model\n",
     "lr = LogisticRegression(labelCol=\"Survived\", featuresCol=\"features\")\n",
-    "model = lr.fit(train_data)\n",
-    "\n",
+    "model = lr.fit(train_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Make predictions\n",
-    "predictions = model.transform(test_data)\n",
-    "\n",
+    "predictions = model.transform(test_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Evaluate model\n",
-    "evaluator = BinaryClassificationEvaluator(labelCol=\"Survived\")\n",
+    "evaluator = BinaryClassificationEvaluator(labelCol=\"Survived\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUC: 0.8754629629629628\n"
+     ]
+    }
+   ],
+   "source": [
     "auc = evaluator.evaluate(predictions)\n",
     "print(f\"AUC: {auc}\")\n",
-    "\n",
-    "# Stop Spark session\n",
-    "spark.stop()\n"
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Stop Spark session\n",
+    "spark.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[12], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28msum\u001b[39m \u001b[38;5;241m=\u001b[39m a\u001b[38;5;241m+\u001b[39mb\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28msum\u001b[39m\n\u001b[1;32m----> 5\u001b[0m num1 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m num2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m())\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mThe sum of the two numbers is: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00maddNumbers(num1,num2)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)    \n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+     ]
+    }
+   ],
+   "source": [
+    "def addNumbers(a,b):\n",
+    "    sum = a+b\n",
+    "    return sum\n",
+    "\n",
+    "num1 = int(input())\n",
+    "num2 = int(input())\n",
+    "\n",
+    "print(f'The sum of the two numbers is: {addNumbers(num1,num2)}')    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = range(0,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "range(0, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "range(0, 3)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "range(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(range(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -59,7 +250,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.6"
   }
  },
