--- a/notebooks/MySQL_db.ipynb
+++ b/notebooks/MySQL_db.ipynb
@@ -222,6 +222,160 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table_name = 'submissions'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = pd.read_sql(f\"SELECT * FROM {table_name}\", engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>author_id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>abstract</th>\n",
+       "      <th>keywords</th>\n",
+       "      <th>co_authors</th>\n",
+       "      <th>file_path</th>\n",
+       "      <th>file_type</th>\n",
+       "      <th>status</th>\n",
+       "      <th>submission_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Exploring the Role of Nonlinear Dynamics in Et...</td>\n",
+       "      <td>This paper examines the application of nonline...</td>\n",
+       "      <td>nonlinear dynamics, agriculture, Ethiopia, dif...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>uploads/ethiopian_agriculture_paper.pdf</td>\n",
+       "      <td>pdf</td>\n",
+       "      <td>pending</td>\n",
+       "      <td>2025-02-11 09:25:36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Advanced Mathematical Models for Climate Chang...</td>\n",
+       "      <td>This research proposes mathematical models tha...</td>\n",
+       "      <td>climate change, mathematical models, Horn of A...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>uploads/climate_change_horn_of_africa.docx</td>\n",
+       "      <td>word</td>\n",
+       "      <td>reviewing</td>\n",
+       "      <td>2025-02-11 09:25:36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Mathematical Analysis of Population Growth in ...</td>\n",
+       "      <td>The study provides a mathematical framework to...</td>\n",
+       "      <td>population growth, Addis Ababa, urban planning...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>uploads/population_growth_addis_ababa.tex</td>\n",
+       "      <td>latex</td>\n",
+       "      <td>editing</td>\n",
+       "      <td>2025-02-11 09:25:36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Numerical Methods using PDEs</td>\n",
+       "      <td>In this paper ....</td>\n",
+       "      <td>Numerical methods</td>\n",
+       "      <td>None</td>\n",
+       "      <td>uploads\\1739408026205.pdf</td>\n",
+       "      <td>pdf</td>\n",
+       "      <td>pending</td>\n",
+       "      <td>2025-02-12 16:53:46</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  author_id                                              title  \\\n",
+       "0   1          1  Exploring the Role of Nonlinear Dynamics in Et...   \n",
+       "1   2          2  Advanced Mathematical Models for Climate Chang...   \n",
+       "2   3          3  Mathematical Analysis of Population Growth in ...   \n",
+       "3   5          4                       Numerical Methods using PDEs   \n",
+       "\n",
+       "                                            abstract  \\\n",
+       "0  This paper examines the application of nonline...   \n",
+       "1  This research proposes mathematical models tha...   \n",
+       "2  The study provides a mathematical framework to...   \n",
+       "3                                 In this paper ....   \n",
+       "\n",
+       "                                            keywords co_authors  \\\n",
+       "0  nonlinear dynamics, agriculture, Ethiopia, dif...       None   \n",
+       "1  climate change, mathematical models, Horn of A...       None   \n",
+       "2  population growth, Addis Ababa, urban planning...       None   \n",
+       "3                                  Numerical methods       None   \n",
+       "\n",
+       "                                    file_path file_type     status  \\\n",
+       "0     uploads/ethiopian_agriculture_paper.pdf       pdf    pending   \n",
+       "1  uploads/climate_change_horn_of_africa.docx      word  reviewing   \n",
+       "2   uploads/population_growth_addis_ababa.tex     latex    editing   \n",
+       "3                   uploads\\1739408026205.pdf       pdf    pending   \n",
+       "\n",
+       "      submission_date  \n",
+       "0 2025-02-11 09:25:36  \n",
+       "1 2025-02-11 09:25:36  \n",
+       "2 2025-02-11 09:25:36  \n",
+       "3 2025-02-12 16:53:46  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
