--- a/notebooks/python_challenges.ipynb
+++ b/notebooks/python_challenges.ipynb
@@ -1781,6 +1781,164 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Given two positive integers left and right,** \n",
+    "- Find the two integers num1 and num2 such that:\n",
+    "\n",
+    "    - left <= num1 < num2 <= right .\n",
+    "    - Both num1 and num2 are prime numbers.\n",
+    "    - num2 - num1 is the minimum amongst all other pairs satisfying the above conditions.\n",
+    "    - Return the positive integer array ans = [num1, num2]. \n",
+    "\n",
+    "- If there are multiple pairs satisfying these conditions, \n",
+    "  - return the one with the smallest num1 value. \n",
+    "- If no such numbers exist, return [-1, -1]."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def sieve(self, limit):\n",
+    "        \"\"\" Returns a boolean list where True indicates a prime number. \"\"\"\n",
+    "        is_prime = [True] * (limit + 1)\n",
+    "        is_prime[0] = is_prime[1] = False  # 0 and 1 are not prime\n",
+    "\n",
+    "        for num in range(2, int(limit**0.5) + 1):\n",
+    "            if is_prime[num]:\n",
+    "                for multiple in range(num * num, limit + 1, num):\n",
+    "                    is_prime[multiple] = False\n",
+    "\n",
+    "        return is_prime\n",
+    "\n",
+    "    def closestPrimes(self, left, right):\n",
+    "        \"\"\"\n",
+    "        :type left: int\n",
+    "        :type right: int\n",
+    "        :rtype: List[int]\n",
+    "        \"\"\"\n",
+    "        is_prime = self.sieve(right)  # Precompute primes up to 'right'\n",
+    "        \n",
+    "        primes = [num for num in range(left, right + 1) if is_prime[num]]\n",
+    "        \n",
+    "        if len(primes) < 2:\n",
+    "            return [-1, -1]\n",
+    "\n",
+    "        # Find the closest pair\n",
+    "        min_diff = float('inf')\n",
+    "        ans = [-1, -1]\n",
+    "\n",
+    "        for i in range(len(primes) - 1):\n",
+    "            diff = primes[i + 1] - primes[i]\n",
+    "            if diff < min_diff:\n",
+    "                min_diff = diff\n",
+    "                ans = [primes[i], primes[i + 1]]\n",
+    "\n",
+    "        return ans\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def sieve(self, limit):\n",
+    "        is_prime = [True] * (limit + 1)\n",
+    "        is_prime[0] = is_prime[1] = False\n",
+    "\n",
+    "        for num in range(2, int(limit**0.5) + 1):\n",
+    "            if is_prime[num]:\n",
+    "                for multiple in range(num * num, limit + 1, num):\n",
+    "                    is_prime[multiple] = False\n",
+    "\n",
+    "        return is_prime\n",
+    "\n",
+    "    def closestPrimes(self, left, right):\n",
+    "        \"\"\"\n",
+    "        :type left: int\n",
+    "        :type right: int\n",
+    "        :rtype: List[int]\n",
+    "        \"\"\"\n",
+    "        is_prime = self.sieve(right)\n",
+    "        \n",
+    "        primes = [num for num in range(left, right + 1) if is_prime[num]]\n",
+    "        \n",
+    "        if len(primes) < 2:\n",
+    "            return [-1, -1]\n",
+    "        \n",
+    "        min_diff = float('inf')\n",
+    "        ans = [-1, -1]\n",
+    "\n",
+    "        for i in range(len(primes) - 1):\n",
+    "            diff = primes[i + 1] - primes[i]\n",
+    "            if diff < min_diff:\n",
+    "                min_diff = diff\n",
+    "                ans = [primes[i], primes[i + 1]]\n",
+    "\n",
+    "        return ans\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11, 13]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example usage\n",
+    "sol = Solution()\n",
+    "print(sol.closestPrimes(10, 50))  # Example output: [11, 13]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "29 is a prime number\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_prime(n):\n",
+    "    if n < 2:  # Numbers less than 2 are not prime\n",
+    "        return False\n",
+    "    if n == 2:  # 2 is prime\n",
+    "        return True\n",
+    "    if n % 2 == 0:  # Even numbers greater than 2 are not prime\n",
+    "        return False\n",
+    "    for i in range(3, int(n**0.5) + 1, 2):  # Check odd divisors up to √n\n",
+    "        if n % i == 0:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "# Example\n",
+    "num = 29\n",
+    "if is_prime(num):\n",
+    "    print(f\"{num} is a prime number\")\n",
+    "else:\n",
+    "    print(f\"{num} is not a prime number\")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
