--- a/notebooks/python_challenges.ipynb
+++ b/notebooks/python_challenges.ipynb
@@ -2315,11 +2315,195 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   emp_id  event_day  in_time  out_time\n",
+      "0       1 2020-11-28        4        32\n",
+      "1       1 2020-11-28       55       200\n",
+      "2       1 2020-12-03        1        42\n",
+      "3       2 2020-11-28        3        33\n",
+      "4       2 2020-12-09       47        74\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Creating the Employees DataFrame\n",
+    "data = {\n",
+    "    \"emp_id\": [1, 1, 1, 2, 2],\n",
+    "    \"event_day\": pd.to_datetime([\"2020-11-28\", \"2020-11-28\", \"2020-12-03\", \"2020-11-28\", \"2020-12-09\"]),\n",
+    "    \"in_time\": [4, 55, 1, 3, 47],\n",
+    "    \"out_time\": [32, 200, 42, 33, 74]\n",
+    "}\n",
+    "Employees = pd.DataFrame(data)\n",
+    "# Displaying the DataFrame\n",
+    "print(Employees)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df= Employees.groupby(['event_day','emp_id']).agg({'in_time': 'sum','out_time':'sum'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>in_time</th>\n",
+       "      <th>out_time</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>event_day</th>\n",
+       "      <th>emp_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">2020-11-28</th>\n",
+       "      <th>1</th>\n",
+       "      <td>59</td>\n",
+       "      <td>232</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-12-03</th>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-12-09</th>\n",
+       "      <th>2</th>\n",
+       "      <td>47</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   in_time  out_time\n",
+       "event_day  emp_id                   \n",
+       "2020-11-28 1            59       232\n",
+       "           2             3        33\n",
+       "2020-12-03 1             1        42\n",
+       "2020-12-09 2            47        74"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(3)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[1,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         day  emp_id  total_time\n",
+      "0 2020-11-28       1         173\n",
+      "1 2020-11-28       2          30\n",
+      "2 2020-12-03       1          41\n",
+      "3 2020-12-09       2          27\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Creating the Employees DataFrame\n",
+    "data = {\n",
+    "    \"emp_id\": [1, 1, 1, 2, 2],\n",
+    "    \"event_day\": pd.to_datetime([\"2020-11-28\", \"2020-11-28\", \"2020-12-03\", \"2020-11-28\", \"2020-12-09\"]),\n",
+    "    \"in_time\": [4, 55, 1, 3, 47],\n",
+    "    \"out_time\": [32, 200, 42, 33, 74]\n",
+    "}\n",
+    "\n",
+    "Employees = pd.DataFrame(data)\n",
+    "\n",
+    "# Calculate total time worked per event\n",
+    "Employees[\"total_time\"] = Employees[\"out_time\"] - Employees[\"in_time\"]\n",
+    "\n",
+    "# Group by event_day and emp_id, then sum the total_time\n",
+    "result = Employees.groupby([\"event_day\", \"emp_id\"], as_index=False)[\"total_time\"].sum()\n",
+    "\n",
+    "# Rename event_day to day for expected output format\n",
+    "result.rename(columns={\"event_day\": \"day\"}, inplace=True)\n",
+    "\n",
+    "# Display the final result\n",
+    "print(result)\n"
+   ]
   }
  ],
  "metadata": {
