--- a/notebooks/python_challenges.ipynb
+++ b/notebooks/python_challenges.ipynb
@@ -2504,6 +2504,163 @@
     "# Display the final result\n",
     "print(result)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "able: Activity\n",
+    "\n",
+    "+--------------+---------+\n",
+    "| Column Name  | Type    |\n",
+    "+--------------+---------+\n",
+    "| player_id    | int     |\n",
+    "| device_id    | int     |\n",
+    "| event_date   | date    |\n",
+    "| games_played | int     |\n",
+    "+--------------+---------+\n",
+    "(player_id, event_date) is the primary key (combination of columns with unique values) of this table.\n",
+    "This table shows the activity of players of some games.\n",
+    "Each row is a record of a player who logged in and played a number of games (possibly 0) before logging out on someday using some device.\n",
+    " \n",
+    "\n",
+    "Write a solution to find the first login date for each player.\n",
+    "\n",
+    "Return the result table in any order.\n",
+    "\n",
+    "The result format is in the following example.\n",
+    "\n",
+    " \n",
+    "\n",
+    "Example 1:\n",
+    "\n",
+    "Input: \n",
+    "Activity table:\n",
+    "+-----------+-----------+------------+--------------+\n",
+    "| player_id | device_id | event_date | games_played |\n",
+    "+-----------+-----------+------------+--------------+\n",
+    "| 1         | 2         | 2016-03-01 | 5            |\n",
+    "| 1         | 2         | 2016-05-02 | 6            |\n",
+    "| 2         | 3         | 2017-06-25 | 1            |\n",
+    "| 3         | 1         | 2016-03-02 | 0            |\n",
+    "| 3         | 4         | 2018-07-03 | 5            |\n",
+    "+-----------+-----------+------------+--------------+\n",
+    "Output: \n",
+    "+-----------+-------------+\n",
+    "| player_id | first_login |\n",
+    "+-----------+-------------+\n",
+    "| 1         | 2016-03-01  |\n",
+    "| 2         | 2017-06-25  |\n",
+    "| 3         | 2016-03-02  |\n",
+    "+-----------+-------------+"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   player_id  device_id event_date  games_played\n",
+      "0          1          2 2016-03-01             5\n",
+      "1          1          2 2016-05-02             6\n",
+      "2          2          3 2017-06-25             1\n",
+      "3          3          1 2016-03-02             0\n",
+      "4          3          4 2018-07-03             5\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = {\n",
+    "    \"player_id\": [1, 1, 2, 3, 3],\n",
+    "    \"device_id\": [2, 2, 3, 1, 4],\n",
+    "    \"event_date\": pd.to_datetime([\"2016-03-01\", \"2016-05-02\", \"2017-06-25\", \"2016-03-02\", \"2018-07-03\"]),\n",
+    "    \"games_played\": [5, 6, 1, 0, 5]\n",
+    "}\n",
+    "\n",
+    "Players = pd.DataFrame(data)\n",
+    "\n",
+    "# Display the DataFrame\n",
+    "print(Players)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>player_id</th>\n",
+       "      <th>event_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2016-03-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2017-06-25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2016-03-02</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   player_id event_date\n",
+       "0          1 2016-03-01\n",
+       "1          2 2017-06-25\n",
+       "2          3 2016-03-02"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = Players.groupby('player_id'\n",
+    "                     ,as_index=False)['event_date'].min()\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
