--- a/notebooks/python_challenges.ipynb
+++ b/notebooks/python_challenges.ipynb
@@ -2812,11 +2812,386 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  student     class\n",
+      "0       A      Math\n",
+      "1       B   English\n",
+      "2       C      Math\n",
+      "3       D   Biology\n",
+      "4       E      Math\n",
+      "5       F  Computer\n",
+      "6       G      Math\n",
+      "7       H      Math\n",
+      "8       I      Math\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create the dataframe\n",
+    "data = {\n",
+    "    'student': ['A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I'],\n",
+    "    'class': ['Math', 'English', 'Math', 'Biology', 'Math', 'Computer', 'Math', 'Math', 'Math']\n",
+    "}\n",
+    "\n",
+    "df_courses = pd.DataFrame(data)\n",
+    "print(df_courses)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>student</th>\n",
+       "      <th>class</th>\n",
+       "      <th>cnt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A</td>\n",
+       "      <td>Math</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>B</td>\n",
+       "      <td>English</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>C</td>\n",
+       "      <td>Math</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>D</td>\n",
+       "      <td>Biology</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>E</td>\n",
+       "      <td>Math</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>F</td>\n",
+       "      <td>Computer</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>G</td>\n",
+       "      <td>Math</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>H</td>\n",
+       "      <td>Math</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>I</td>\n",
+       "      <td>Math</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  student     class  cnt\n",
+       "0       A      Math  1.0\n",
+       "1       B   English  1.0\n",
+       "2       C      Math  1.0\n",
+       "3       D   Biology  6.0\n",
+       "4       E      Math  NaN\n",
+       "5       F  Computer  NaN\n",
+       "6       G      Math  NaN\n",
+       "7       H      Math  NaN\n",
+       "8       I      Math  NaN"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_courses['cnt'] = df_courses.groupby('class',as_index=False)['class'].count()\n",
+    "df_courses"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the dataframe\n",
+    "data = {\n",
+    "    'student': ['A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I'],\n",
+    "    'class': ['Math', 'English', 'Math', 'Biology', 'Math', 'Computer', 'Math', 'Math', 'Math']\n",
+    "}\n",
+    "\n",
+    "df_courses = pd.DataFrame(data)\n",
+    "\n",
+    "# Group by class and count the number of students in each class\n",
+    "class_counts = df_courses.groupby('class').size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "class\n",
+       "Biology     1\n",
+       "Computer    1\n",
+       "English     1\n",
+       "Math        6\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class_counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  class\n",
+      "0  Math\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Filter classes with at least 5 students\n",
+    "result = class_counts[class_counts >= 5].index\n",
+    "\n",
+    "# Convert the result to a DataFrame for display\n",
+    "result_df = pd.DataFrame(result, columns=['class'])\n",
+    "print(result_df)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Table: Orders\n",
+    "\n",
+    "+-----------------+----------+\n",
+    "| Column Name     | Type     |\n",
+    "+-----------------+----------+\n",
+    "| order_number    | int      |\n",
+    "| customer_number | int      |\n",
+    "+-----------------+----------+\n",
+    "order_number is the primary key (column with unique values) for this table.\n",
+    "This table contains information about the order ID and the customer ID.\n",
+    " \n",
+    "\n",
+    "Write a solution to find the customer_number for the customer who has placed the largest number of orders.\n",
+    "\n",
+    "The test cases are generated so that exactly one customer will have placed more orders than any other customer.\n",
+    "\n",
+    "The result format is in the following example.\n",
+    "\n",
+    " \n",
+    "\n",
+    "Example 1:\n",
+    "\n",
+    "Input: \n",
+    "Orders table:\n",
+    "+--------------+-----------------+\n",
+    "| order_number | customer_number |\n",
+    "+--------------+-----------------+\n",
+    "| 1            | 1               |\n",
+    "| 2            | 2               |\n",
+    "| 3            | 3               |\n",
+    "| 4            | 3               |\n",
+    "+--------------+-----------------+\n",
+    "Output: \n",
+    "+-----------------+\n",
+    "| customer_number |\n",
+    "+-----------------+\n",
+    "| 3               |\n",
+    "+-----------------+\n",
+    "Explanation: \n",
+    "The customer with number 3 has two orders, which is greater than either customer 1 or 2 because each of them only has one order. \n",
+    "So the result is customer_number 3.\n",
+    " \n",
+    "\n",
+    "Follow up: What if more than one customer has the largest number of orders, can you find all the customer_number in this case?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the dataframe\n",
+    "data = {\n",
+    "    'order_number': [1, 2, 3, 4],\n",
+    "    'customer_number': [1, 2, 3, 3]\n",
+    "}\n",
+    "\n",
+    "df_orders = pd.DataFrame(data)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "customer_number\n",
+       "1    1\n",
+       "2    1\n",
+       "3    2\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Group by 'customer_number' and count the number of orders for each customer\n",
+    "order_counts = df_orders.groupby('customer_number').size()\n",
+    "order_counts\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(2)"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find the maximum number of orders\n",
+    "max_orders = order_counts.max()\n",
+    "max_orders\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index([3], dtype='int64', name='customer_number')"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Filter customers who have placed the maximum number of orders\n",
+    "result = order_counts[order_counts == max_orders].index\n",
+    "\n",
+    "result\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   customer_number\n",
+      "0                3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert the result to a DataFrame\n",
+    "result_df = pd.DataFrame(result, columns=['customer_number'])\n",
+    "print(result_df)"
+   ]
   }
  ],
  "metadata": {
