--- a/notebooks/python_challenges.ipynb
+++ b/notebooks/python_challenges.ipynb
@@ -3192,6 +3192,430 @@
     "result_df = pd.DataFrame(result, columns=['customer_number'])\n",
     "print(result_df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sell_date</th>\n",
+       "      <th>product</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-05-30</td>\n",
+       "      <td>Headphone</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-06-01</td>\n",
+       "      <td>Pencil</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-06-02</td>\n",
+       "      <td>Mask</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-05-30</td>\n",
+       "      <td>Basketball</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-06-01</td>\n",
+       "      <td>Bible</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2020-06-02</td>\n",
+       "      <td>Mask</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2020-05-30</td>\n",
+       "      <td>T-Shirt</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    sell_date     product\n",
+       "0  2020-05-30   Headphone\n",
+       "1  2020-06-01      Pencil\n",
+       "2  2020-06-02        Mask\n",
+       "3  2020-05-30  Basketball\n",
+       "4  2020-06-01       Bible\n",
+       "5  2020-06-02        Mask\n",
+       "6  2020-05-30     T-Shirt"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = {\n",
+    "    'sell_date': ['2020-05-30', '2020-06-01', '2020-06-02', '2020-05-30', '2020-06-01', '2020-06-02', '2020-05-30'],\n",
+    "    'product': ['Headphone', 'Pencil', 'Mask', 'Basketball', 'Bible', 'Mask', 'T-Shirt']\n",
+    "}\n",
+    "\n",
+    "df_sales = pd.DataFrame(data)\n",
+    "df_sales\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sell_date</th>\n",
+       "      <th>product</th>\n",
+       "      <th>num_sell</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-05-30</td>\n",
+       "      <td>Headphone</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-06-01</td>\n",
+       "      <td>Pencil</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-06-02</td>\n",
+       "      <td>Mask</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-05-30</td>\n",
+       "      <td>Basketball</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-06-01</td>\n",
+       "      <td>Bible</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2020-06-02</td>\n",
+       "      <td>Mask</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2020-05-30</td>\n",
+       "      <td>T-Shirt</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    sell_date     product  num_sell\n",
+       "0  2020-05-30   Headphone         6\n",
+       "1  2020-06-01      Pencil         6\n",
+       "2  2020-06-02        Mask         6\n",
+       "3  2020-05-30  Basketball         6\n",
+       "4  2020-06-01       Bible         6\n",
+       "5  2020-06-02        Mask         6\n",
+       "6  2020-05-30     T-Shirt         6"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_sales['num_sell'] = df_sales['product'].nunique()\n",
+    "df_sales"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 =  df_sales.groupby('sell_date', as_index=False)['product'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sell_date</th>\n",
+       "      <th>product</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-05-30</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-06-01</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-06-02</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    sell_date  product\n",
+       "0  2020-05-30        3\n",
+       "1  2020-06-01        2\n",
+       "2  2020-06-02        1"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sell_date</th>\n",
+       "      <th>product</th>\n",
+       "      <th>num_sell</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-05-30</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-06-01</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-06-02</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    sell_date  product  num_sell\n",
+       "0  2020-05-30        3         3\n",
+       "1  2020-06-01        2         2\n",
+       "2  2020-06-02        1         1"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2['num_sell']=df2['product']\n",
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Table Activities:\n",
+    "\n",
+    "+-------------+---------+\n",
+    "| Column Name | Type    |\n",
+    "+-------------+---------+\n",
+    "| sell_date   | date    |\n",
+    "| product     | varchar |\n",
+    "+-------------+---------+\n",
+    "There is no primary key (column with unique values) for this table. It may contain duplicates.\n",
+    "Each row of this table contains the product name and the date it was sold in a market.\n",
+    " \n",
+    "\n",
+    "Write a solution to find for each date the number of different products sold and their names.\n",
+    "\n",
+    "The sold products names for each date should be sorted lexicographically.\n",
+    "\n",
+    "Return the result table ordered by sell_date.\n",
+    "\n",
+    "The result format is in the following example.\n",
+    "\n",
+    " \n",
+    "\n",
+    "Example 1:\n",
+    "\n",
+    "Input: \n",
+    "Activities table:\n",
+    "+------------+------------+\n",
+    "| sell_date  | product     |\n",
+    "+------------+------------+\n",
+    "| 2020-05-30 | Headphone  |\n",
+    "| 2020-06-01 | Pencil     |\n",
+    "| 2020-06-02 | Mask       |\n",
+    "| 2020-05-30 | Basketball |\n",
+    "| 2020-06-01 | Bible      |\n",
+    "| 2020-06-02 | Mask       |\n",
+    "| 2020-05-30 | T-Shirt    |\n",
+    "+------------+------------+\n",
+    "Output: \n",
+    "+------------+----------+------------------------------+\n",
+    "| sell_date  | num_sold | products                     |\n",
+    "+------------+----------+------------------------------+\n",
+    "| 2020-05-30 | 3        | Basketball,Headphone,T-shirt |\n",
+    "| 2020-06-01 | 2        | Bible,Pencil                 |\n",
+    "| 2020-06-02 | 1        | Mask                         |\n",
+    "+------------+----------+------------------------------+\n",
+    "Explanation: \n",
+    "For 2020-05-30, Sold items were (Headphone, Basketball, T-shirt), we sort them lexicographically and separate them by a comma.\n",
+    "For 2020-06-01, Sold items were (Pencil, Bible), we sort them lexicographically and separate them by a comma.\n",
+    "For 2020-06-02, the Sold item is (Mask), we just return it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Create the dataframe\n",
+    "data = {\n",
+    "    'sell_date': ['2020-05-30', '2020-06-01', '2020-06-02', '2020-05-30', '2020-06-01', '2020-06-02', '2020-05-30'],\n",
+    "    'product': ['Headphone', 'Pencil', 'Mask', 'Basketball', 'Bible', 'Mask', 'T-Shirt']\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Group by 'sell_date' and get the unique products for each date\n",
+    "result = df.groupby('sell_date')['product'].agg(\n",
+    "    num_sold='nunique', \n",
+    "    products=lambda x: ','.join(sorted(x.unique())) \n",
+    ").reset_index()\n",
+    "\n",
+    "# Sort the result by 'sell_date'\n",
+    "result = result.sort_values(by='sell_date')\n",
+    "\n",
+    "# Display the result\n",
+    "print(result)\n"
+   ]
   }
  ],
  "metadata": {
